# DreiAugen

./: .gitignore  README.md  compose.yaml  feeder-script.py  notes.txt
esp-controller/: platformio.ini
esp-controller/src/: main.cpp
tripi_daemon/: .gitignore  Cargo.toml  Readme.md
tripi_daemon/src/: config_persistance.rs  control.rs  influx.rs  main.rs  web.rs
tripi_daemon/src/serial/: mod.rs  reader.rs  sender.rs
tripi_daemon/src/web/: index.html
