[package]
name = "tripi_daemon"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
# InfluxDB
influxdb2 = { version = "0.5.2", default-features = false, features = ["rustls"] }
influxdb2-derive = "0.1.1"
influxdb2-structmap = "0.2"
num-traits = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

# Web UI
axum = { version = "0.8.8", default-features = false, features = ["tokio", "http1", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tokio with Actor
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.5"
futures = "0.3"
chrono = "0.4.43"

serialport = {version = "4.8.1", default-features = false}

log = "0.4.29"
env_logger = "0.11.8"
thiserror = "2.0.18"